fix: remove all local path

--- a/examples/local_action_planner.ipynb
+++ b/examples/local_action_planner.ipynb
@@ -69,13 +69,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the map\n",
     "map = Map(config)\n",
-    "map.initialize_map_from_file(roads_file='E:/Projects/SimWorld/output_test/roads.json') # use default map"
+    "map.initialize_map_from_file(roads_file='<path to your roads.json>')"
    ]
   },
   {
