--- a/examples/layout_generation.ipynb
+++ b/examples/layout_generation.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "cfc = CityFunctionCall(config, num_segments=20)\n",
     "cfc.generate_city()\n",
-    "cfc.export_city('E:\\Projects\\SimWorld\\output_20')"
+    "cfc.export_city('<path to your output folder>')"
    ]
   },
   {
@@ -74,7 +74,7 @@
     "# cfc.generate_building_alone_roads()\n",
     "# # cfc.generate_element_around_buildings()\n",
     "# cfc.generate_element_alone_roads()\n",
-    "# cfc.export_city('D:\\Projects\\SimWorld\\output_test')"
+    "# cfc.export_city('<path to your output folder>')"
    ]
   },
   {
@@ -113,34 +113,7 @@
     "# cfc.generate_building_alone_roads()\n",
     "# cfc.generate_element_around_buildings()\n",
     "# cfc.generate_element_alone_roads()\n",
-    "# cfc.export_city('D:\\\\Projects\\\\SimWorld\\\\output_test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# i = 0\n",
-    "# road_num = 15\n",
-    "# while i < 5:\n",
-    "#     cfc = CityFunctionCall(config, seed=i, num_segments=road_num)\n",
-    "#     cfc.generate_road_network()\n",
-    "#     cfc.generate_building_alone_roads()\n",
-    "#     cfc.generate_element_alone_roads()\n",
-    "#     cfc.export_city(f'../output_test/road_{road_num}/map_{i}')\n",
-    "#     i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cfc = CityFunctionCall(config)\n",
-    "# cfc.visualization('D:/Projects/SimWorld/output_test/road_15/map_0')"
+    "# cfc.export_city('<path to your output folder>')"
    ]
   }
  ],
