--- a/examples/traffic_simulation.ipynb
+++ b/examples/traffic_simulation.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# Generate world if not generated\n",
-    "# communicator.generate_world('D:\\Projects\\SimWorld\\output_test\\progen_world.json', config['citygen.ue_asset_path'], run_time=False)"
+    "# communicator.generate_world('<path to your progen_world.json>', config['citygen.ue_asset_path'], run_time=False)"
    ]
   },
   {
