fix: example ue commands

--- a/examples/ue_command.ipynb
+++ b/examples/ue_command.ipynb
@@ -140,7 +140,7 @@
     "robot_dog_name = \"Demo_Robot\"\n",
     "robot_dog_asset = \"/Game/Robot_Dog/Blueprint/BP_SpotRobot.BP_SpotRobot_C\"\n",
     "ucv.spawn_bp_asset(robot_dog_asset, robot_dog_name)\n",
-    "ucv.set_location((-21700, -15000, 20), robot_dog_name)\n",
+    "ucv.set_location((0, 0, 20), robot_dog_name)\n",
     "ucv.enable_controller(robot_dog_name, True)\n"
    ]
   },
@@ -281,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "humanoid_1 = Humanoid(Vector(-21700, -15000), Vector(1, 0))\n",
+    "humanoid_1 = Humanoid(Vector(0, 0), Vector(1, 0))\n",
     "# humanoid_path = '/Game/TrafficSystem/Pedestrian/Base_User_Agent.Base_User_Agent_C'\n",
     "humanoid_path = '/Game/Human_Avatar/DefaultCharacter/Blueprint/BP_Default_Character.BP_Default_Character_C'\n",
     "humanoid_name = 'GEN_BP_Humanoid_0'"
@@ -293,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "communicator.spawn_agent(humanoid_1, humanoid_path)"
+    "communicator.spawn_agent(agent=humanoid_1, name=humanoid_name, model_path=humanoid_path)"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "communicator.spawn_object('BP_Bench2_C_1', '/Game/Interactable_InteractionKitVol3/Blueprint/Blueprint/BP_Bench2.BP_Bench2_C', (-21800, -15000, 20), (0, 0, 0))"
+    "communicator.spawn_object('BP_Bench2_C_1', '/Game/Interactable_InteractionKitVol3/Blueprint/Blueprint/BP_Bench2.BP_Bench2_C', (300, 0, 20), (0, 0, 0))"
    ]
   },
   {
