feat: add example output

--- a/examples/camera.ipynb
+++ b/examples/camera.ipynb
@@ -28,7 +28,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "communicator = Communicator(UnrealCV())"
+    "ucv = UnrealCV()\n",
+    "communicator = Communicator(ucv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd2a4fd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "robot_dog_name = \"Demo_Robot\"\n",
+    "robot_dog_asset = \"/Game/Robot_Dog/Blueprint/BP_SpotRobot.BP_SpotRobot_C\"\n",
+    "ucv.spawn_bp_asset(robot_dog_asset, robot_dog_name)\n",
+    "ucv.set_location((0, 0, 20), robot_dog_name)\n",
+    "ucv.enable_controller(robot_dog_name, True)"
    ]
   },
   {
@@ -38,14 +53,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = communicator.unrealcv.get_image(0, 'lit')\n",
+    "image = communicator.unrealcv.get_image(1, 'lit')\n",
     "communicator.show_img(image)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agents",
+   "display_name": "simworld",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +74,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
