--- a/examples/ue_command.ipynb
+++ b/examples/ue_command.ipynb
@@ -64,6 +64,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Spawn a robot dog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "robot_dog_name = \"Demo_Robot\"\n",
+    "robot_dog_asset = \"/Game/Robot_Dog/Blueprint/BP_SpotRobot.BP_SpotRobot_C\"\n",
+    "ucv.spawn_bp_asset(robot_dog_asset, robot_dog_name)\n",
+    "ucv.set_location((0, 0, 20), robot_dog_name)\n",
+    "ucv.enable_controller(robot_dog_name, True)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -122,26 +142,6 @@
    "metadata": {},
    "source": [
     "### Robot dog test"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Spawn a robot dog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "robot_dog_name = \"Demo_Robot\"\n",
-    "robot_dog_asset = \"/Game/Robot_Dog/Blueprint/BP_SpotRobot.BP_SpotRobot_C\"\n",
-    "ucv.spawn_bp_asset(robot_dog_asset, robot_dog_name)\n",
-    "ucv.set_location((0, 0, 20), robot_dog_name)\n",
-    "ucv.enable_controller(robot_dog_name, True)\n"
    ]
   },
   {
@@ -318,33 +318,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "communicator.spawn_object('BP_Bench2_C_1', '/Game/Interactable_InteractionKitVol3/Blueprint/Blueprint/BP_Bench2.BP_Bench2_C', (300, 0, 20), (0, 0, 0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ucv.humanoid_sit_down(humanoid_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ucv.humanoid_stand_up(humanoid_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# arguing\n",
     "ucv.humanoid_argue(humanoid_name, 0)"
    ]
@@ -479,8 +452,7 @@
    "outputs": [],
    "source": [
     "# pick up heavy object\n",
-    "# ucv.humanoid_pick_up_object(humanoid_name, \"BP_Interactable_Box_C_1\")\n",
-    "ucv.humanoid_pick_up_object('Base_User_Agent_C_1', \"BP_Interactable_Box_C_1\")"
+    "ucv.humanoid_pick_up_object(humanoid_name, \"BP_Interactable_Box_C_1\")"
    ]
   },
   {
@@ -508,7 +480,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "communicator.spawn_object('BP_VehicleBase_Destruction_C_1', '/Game/Interactable_Vehicle/Blueprint/BP_VehicleBase_Destruction.BP_VehicleBase_Destruction_C', (400, 0, 0), (0, 0, 0))"
+    "# enter and exit vehicle\n",
+    "communicator.spawn_object('BP_VehicleBase_Destruction_C_1', '/Game/Interactable_Vehicle/Blueprint/BP_VehicleBase_Destruction.BP_VehicleBase_Destruction_C', (100, 200, 0), (0, 0, 0))"
    ]
   },
   {
