--- a/examples/layout_generation.ipynb
+++ b/examples/layout_generation.ipynb
@@ -40,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfc = CityFunctionCall(config, num_segments=20)\n",
+    "cfc = CityFunctionCall(config, num_segments=10)\n",
     "cfc.generate_city()\n",
     "cfc.export_city('<path to your output folder>')"
    ]
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agents",
+   "display_name": "simworld",
    "language": "python",
    "name": "python3"
   },
@@ -133,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
