--- a/examples/asset_rp.ipynb
+++ b/examples/asset_rp.ipynb
@@ -53,7 +53,7 @@
     "from simworld.assets_rp.AssetsRP import AssetsRetrieverPlacer\n",
     "from simworld.config.config_loader import Config\n",
     "config = Config()\n",
-    "arp = AssetsRetrieverPlacer(config, input_dir='<path to the folder containing the city layout>') # you can use ./example_city/"
+    "arp = AssetsRetrieverPlacer(config, input_dir='<path to the folder containing the city layout>') # you can use data/example_city/"
    ]
   },
   {
