fix: minor issue in demo script

--- a/examples/gym_interface_demo.ipynb
+++ b/examples/gym_interface_demo.ipynb
@@ -92,7 +92,7 @@
         "You can only output ONE of the following actions:\n",
         "- \"forward <duration>\": Move forward for <duration> seconds (e.g., \"forward 2\")\n",
         "- \"rotate <angle> <direction>\": Rotate <angle> degrees in <direction> (left/right) (e.g., \"rotate 45 left\")\n",
-        "- \"wait\": Do nothing for 1 seconds\n",
+        "- \"wait\": Do nothing for 1 second\n",
         "\n",
         "Output ONLY the action command, nothing else.\"\"\"\n",
         "\n",
@@ -138,8 +138,8 @@
         "Choose your next action to move closer to the target.\"\"\"\n",
         "        action, time = self.llm.generate_text(system_prompt=self.system_prompt, user_prompt=prompt)\n",
         "\n",
-        "        print(f\"Raw response: {action}\")\n",
-        "        return action.strip()"
+        "        # print(f\"Raw response: {action}\")\n",
+        "        return action"
       ]
     },
     {
@@ -325,7 +325,7 @@
         "- Valid action formats:\n",
         "  - `\"forward <duration>\"` - e.g., \"forward 2\"\n",
         "  - `\"rotate <angle> <left|right>\"` - e.g., \"rotate 45 left\"\n",
-        "  - `\"wait\"` - pause for 0.5 seconds\n",
+        "  - `\"wait\"` - pause for 1 second\n",
         "- Action cleaning: Surrounding quotes are automatically removed (LLM may return `\"rotate 45 left\"` with quotes)\n",
         "- If action parsing fails:\n",
         "  - A warning message is printed\n",
