--- a/examples/gym_interface_demo.ipynb
+++ b/examples/gym_interface_demo.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -30,6 +30,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!set GEMINI_API_KEY=AIzaSyDEF7bV305M1rx7Sk5JyaKJbvQCuYT4zQs"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -38,21 +47,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "INFO:__init__:230:Got connection confirm: b'connected to SimWorld'\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "=>Info: using ip-port socket\n"
+          ]
+        }
+      ],
       "source": [
         "communicator = Communicator(UnrealCV())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
         "import os \n",
-        "os.environ['OPENAI_API_KEY'] = '<your_openai_api_key>'"
+        "os.environ['OPENAI_API_KEY'] = '<your_openai_api_key>'\n",
+        "os.environ['GEMINI_API_KEY'] = 'AIzaSyDEF7bV305M1rx7Sk5JyaKJbvQCuYT4zQs'"
       ]
     },
     {
@@ -79,13 +104,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
         "class Agent():\n",
         "    def __init__(self):\n",
-        "        self.llm = BaseLLM(\"gpt-4o\")\n",
+        "        self.llm = BaseLLM(\"gemini-3-flash-preview\", provider=\"google\")\n",
         "        self.system_prompt = \"\"\"You are an intelligent agent in a 3D simulation world.\n",
         "Your task is to navigate to the target position by choosing appropriate actions. Do not keep rotating in circles.\n",
         "\n",
@@ -139,12 +164,12 @@
         "        action, time = self.llm.generate_text(system_prompt=self.system_prompt, user_prompt=prompt)\n",
         "\n",
         "        # print(f\"Raw response: {action}\")\n",
-        "        return action"
+        "        return action.strip().lower().strip(\"'\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -354,9 +379,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2026-02-11 11:45:07,272 - SimWorld.BaseLLM - INFO - Initialized LLM client for model -- gemini-3-flash-preview, url -- default\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(0.0, 0.0, 600)\n",
+            "Task: Navigate to target position Vector(x=1700.0, y=-1700.0)\n",
+            "Starting position: Vector(x=-27.653, y=-128.222)\n",
+            "\n",
+            "start_time: 1770828315.5737193\n",
+            "Generating text with model -- gemini-3-flash-preview\n",
+            "Contents: ['You are an intelligent agent in a 3D simulation world.\\nYour task is to navigate to the target position by choosing appropriate actions. Do not keep rotating in circles.\\n\\nYou can only output ONE of the following actions:\\n- \"forward <duration>\": Move forward for <duration> seconds (e.g., \"forward 2\")\\n- \"rotate <angle> <direction>\": Rotate <angle> degrees in <direction> (left/right) (e.g., \"rotate 45 left\")\\n- \"wait\": Do nothing for 1 second\\n\\nOutput ONLY the action command, nothing else.\\nCurrent position: Vector(x=-27.653, y=-128.222)\\nCurrent direction: Vector(x=1.0, y=0.0) (direction vector, yaw: 0.0°)\\nTarget position: Vector(x=1700.0, y=-1700.0)\\nDistance to target: 2335.7\\nAngle to target: -42.3° (positive = turn left, negative = turn right)\\n\\nChoose your next action to move closer to the target.']\n",
+            "Failed to generate text: 429 RESOURCE_EXHAUSTED. {'error': {'code': 429, 'message': 'You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. To monitor your current usage, head to: https://ai.dev/rate-limit. \\n* Quota exceeded for metric: generativelanguage.googleapis.com/generate_content_free_tier_requests, limit: 20, model: gemini-3-flash\\nPlease retry in 44.568637437s.', 'status': 'RESOURCE_EXHAUSTED', 'details': [{'@type': 'type.googleapis.com/google.rpc.Help', 'links': [{'description': 'Learn more about Gemini API quotas', 'url': 'https://ai.google.dev/gemini-api/docs/rate-limits'}]}, {'@type': 'type.googleapis.com/google.rpc.QuotaFailure', 'violations': [{'quotaMetric': 'generativelanguage.googleapis.com/generate_content_free_tier_requests', 'quotaId': 'GenerateRequestsPerDayPerProjectPerModel-FreeTier', 'quotaDimensions': {'location': 'global', 'model': 'gemini-3-flash'}, 'quotaValue': '20'}]}, {'@type': 'type.googleapis.com/google.rpc.RetryInfo', 'retryDelay': '44s'}]}}\n",
+            "Contents: ['You are an intelligent agent in a 3D simulation world.\\nYour task is to navigate to the target position by choosing appropriate actions. Do not keep rotating in circles.\\n\\nYou can only output ONE of the following actions:\\n- \"forward <duration>\": Move forward for <duration> seconds (e.g., \"forward 2\")\\n- \"rotate <angle> <direction>\": Rotate <angle> degrees in <direction> (left/right) (e.g., \"rotate 45 left\")\\n- \"wait\": Do nothing for 1 second\\n\\nOutput ONLY the action command, nothing else.\\nCurrent position: Vector(x=-27.653, y=-128.222)\\nCurrent direction: Vector(x=1.0, y=0.0) (direction vector, yaw: 0.0°)\\nTarget position: Vector(x=1700.0, y=-1700.0)\\nDistance to target: 2335.7\\nAngle to target: -42.3° (positive = turn left, negative = turn right)\\n\\nChoose your next action to move closer to the target.']\n",
+            "Failed to generate text: 429 RESOURCE_EXHAUSTED. {'error': {'code': 429, 'message': 'You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. To monitor your current usage, head to: https://ai.dev/rate-limit. \\n* Quota exceeded for metric: generativelanguage.googleapis.com/generate_content_free_tier_requests, limit: 20, model: gemini-3-flash\\nPlease retry in 44.437781652s.', 'status': 'RESOURCE_EXHAUSTED', 'details': [{'@type': 'type.googleapis.com/google.rpc.Help', 'links': [{'description': 'Learn more about Gemini API quotas', 'url': 'https://ai.google.dev/gemini-api/docs/rate-limits'}]}, {'@type': 'type.googleapis.com/google.rpc.QuotaFailure', 'violations': [{'quotaMetric': 'generativelanguage.googleapis.com/generate_content_free_tier_requests', 'quotaId': 'GenerateRequestsPerDayPerProjectPerModel-FreeTier', 'quotaDimensions': {'location': 'global', 'model': 'gemini-3-flash'}, 'quotaValue': '20'}]}, {'@type': 'type.googleapis.com/google.rpc.RetryInfo', 'retryDelay': '44s'}]}}\n",
+            "Contents: ['You are an intelligent agent in a 3D simulation world.\\nYour task is to navigate to the target position by choosing appropriate actions. Do not keep rotating in circles.\\n\\nYou can only output ONE of the following actions:\\n- \"forward <duration>\": Move forward for <duration> seconds (e.g., \"forward 2\")\\n- \"rotate <angle> <direction>\": Rotate <angle> degrees in <direction> (left/right) (e.g., \"rotate 45 left\")\\n- \"wait\": Do nothing for 1 second\\n\\nOutput ONLY the action command, nothing else.\\nCurrent position: Vector(x=-27.653, y=-128.222)\\nCurrent direction: Vector(x=1.0, y=0.0) (direction vector, yaw: 0.0°)\\nTarget position: Vector(x=1700.0, y=-1700.0)\\nDistance to target: 2335.7\\nAngle to target: -42.3° (positive = turn left, negative = turn right)\\n\\nChoose your next action to move closer to the target.']\n",
+            "Failed to generate text: 429 RESOURCE_EXHAUSTED. {'error': {'code': 429, 'message': 'You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. To monitor your current usage, head to: https://ai.dev/rate-limit. \\n* Quota exceeded for metric: generativelanguage.googleapis.com/generate_content_free_tier_requests, limit: 20, model: gemini-3-flash\\nPlease retry in 44.344611851s.', 'status': 'RESOURCE_EXHAUSTED', 'details': [{'@type': 'type.googleapis.com/google.rpc.Help', 'links': [{'description': 'Learn more about Gemini API quotas', 'url': 'https://ai.google.dev/gemini-api/docs/rate-limits'}]}, {'@type': 'type.googleapis.com/google.rpc.QuotaFailure', 'violations': [{'quotaMetric': 'generativelanguage.googleapis.com/generate_content_free_tier_requests', 'quotaId': 'GenerateRequestsPerDayPerProjectPerModel-FreeTier', 'quotaDimensions': {'location': 'global', 'model': 'gemini-3-flash'}, 'quotaValue': '20'}]}, {'@type': 'type.googleapis.com/google.rpc.RetryInfo', 'retryDelay': '44s'}]}}\n",
+            "Contents: ['You are an intelligent agent in a 3D simulation world.\\nYour task is to navigate to the target position by choosing appropriate actions. Do not keep rotating in circles.\\n\\nYou can only output ONE of the following actions:\\n- \"forward <duration>\": Move forward for <duration> seconds (e.g., \"forward 2\")\\n- \"rotate <angle> <direction>\": Rotate <angle> degrees in <direction> (left/right) (e.g., \"rotate 45 left\")\\n- \"wait\": Do nothing for 1 second\\n\\nOutput ONLY the action command, nothing else.\\nCurrent position: Vector(x=-27.653, y=-128.222)\\nCurrent direction: Vector(x=1.0, y=0.0) (direction vector, yaw: 0.0°)\\nTarget position: Vector(x=1700.0, y=-1700.0)\\nDistance to target: 2335.7\\nAngle to target: -42.3° (positive = turn left, negative = turn right)\\n\\nChoose your next action to move closer to the target.']\n",
+            "Failed to generate text: 429 RESOURCE_EXHAUSTED. {'error': {'code': 429, 'message': 'You exceeded your current quota, please check your plan and billing details. For more information on this error, head to: https://ai.google.dev/gemini-api/docs/rate-limits. To monitor your current usage, head to: https://ai.dev/rate-limit. \\n* Quota exceeded for metric: generativelanguage.googleapis.com/generate_content_free_tier_requests, limit: 20, model: gemini-3-flash\\nPlease retry in 44.266670267s.', 'status': 'RESOURCE_EXHAUSTED', 'details': [{'@type': 'type.googleapis.com/google.rpc.Help', 'links': [{'description': 'Learn more about Gemini API quotas', 'url': 'https://ai.google.dev/gemini-api/docs/rate-limits'}]}, {'@type': 'type.googleapis.com/google.rpc.QuotaFailure', 'violations': [{'quotaMetric': 'generativelanguage.googleapis.com/generate_content_free_tier_requests', 'quotaId': 'GenerateRequestsPerDayPerProjectPerModel-FreeTier', 'quotaDimensions': {'location': 'global', 'model': 'gemini-3-flash'}, 'quotaValue': '20'}]}, {'@type': 'type.googleapis.com/google.rpc.RetryInfo', 'retryDelay': '44s'}]}}\n"
+          ]
+        },
+        {
+          "ename": "AttributeError",
+          "evalue": "'NoneType' object has no attribute 'strip'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[10], line 13\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Roll out a short trajectory\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m100\u001b[39m):\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;66;03m# Agent decides next action based on current observation and target\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m     action \u001b[38;5;241m=\u001b[39m \u001b[43magent\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtarget\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStep \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: Action = \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maction\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     16\u001b[0m     \u001b[38;5;66;03m# Execute action and get new observation\u001b[39;00m\n",
+            "Cell \u001b[1;32mIn[5], line 57\u001b[0m, in \u001b[0;36mAgent.action\u001b[1;34m(self, obs, target)\u001b[0m\n\u001b[0;32m     54\u001b[0m action, time \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mllm\u001b[38;5;241m.\u001b[39mgenerate_text(system_prompt\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msystem_prompt, user_prompt\u001b[38;5;241m=\u001b[39mprompt)\n\u001b[0;32m     56\u001b[0m \u001b[38;5;66;03m# print(f\"Raw response: {action}\")\u001b[39;00m\n\u001b[1;32m---> 57\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43maction\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m()\u001b[38;5;241m.\u001b[39mlower()\u001b[38;5;241m.\u001b[39mstrip(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'strip'"
+          ]
+        }
+      ],
       "source": [
         "agent = Agent()\n",
         "env = Environment(communicator)\n",
@@ -369,6 +434,7 @@
         "# Roll out a short trajectory\n",
         "for i in range(100):\n",
         "    # Agent decides next action based on current observation and target\n",
+        "\n",
         "    action = agent.action(obs, env.target)\n",
         "    print(f\"Step {i+1}: Action = '{action}'\")\n",
         "    \n",
@@ -409,12 +475,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
         "communicator.disconnect()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -433,7 +506,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.18"
+      "version": "3.10.19"
     }
   },
   "nbformat": 4,
