--- a/examples/gym_interface_demo.ipynb
+++ b/examples/gym_interface_demo.ipynb
@@ -30,15 +30,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "!set GEMINI_API_KEY=AIzaSyDEF7bV305M1rx7Sk5JyaKJbvQCuYT4zQs"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -71,13 +62,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "import os \n",
         "os.environ['OPENAI_API_KEY'] = '<your_openai_api_key>'\n",
-        "os.environ['GEMINI_API_KEY'] = 'AIzaSyDEF7bV305M1rx7Sk5JyaKJbvQCuYT4zQs'"
+        "os.environ['GEMINI_API_KEY'] = '<your_gemini_api_key>'"
       ]
     },
     {
