--- a/examples/gym_interface_demo.ipynb
+++ b/examples/gym_interface_demo.ipynb
@@ -9,7 +9,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -68,7 +68,7 @@
       "source": [
         "import os \n",
         "os.environ['OPENAI_API_KEY'] = '<your_openai_api_key>'\n",
-        "os.environ['GEMINI_API_KEY'] = '<your_gemini_api_key>'"
+        "os.environ['GEMINI_API_KEY'] = ''"
       ]
     },
     {
